--- a/htmllab1-2.html
+++ b/htmllab1-2.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title> Cast</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cast</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <main id="main">
-        <h1> Cast of Forest Gump</h1>
-        <h2>Tom Hanks: Forest Gump</h2>
-
-        
+        <h1>Cast of Forest Gump</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Actor</th>
+                    <th>Character</th>
+                    <th>More Info</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Tom Hanks</td>
+                    <td>Forest Gump</td>
+                    <td><a href="https://www.imdb.com/name/nm0000158/" target="_blank">IMDb Profile</a></td>
+                </tr>
+                <tr>
+                    <td>Robin Wright</td>
+                    <td>Jenny Curran</td>
+                    <td><a href="https://www.imdb.com/name/nm0000705/" target="_blank">IMDb Profile</a></td>
+                </tr>
+                <tr>
+                    <td>Gary Sinise</td>
+                    <td>Lieutenant Dan Taylor</td>
+                    <td><a href="https://www.imdb.com/name/nm0000641/" target="_blank">IMDb Profile</a></td>
+                </tr>
+            </tbody>
+        </table>
     </main>
 </body>
 </html>
