--- a/htmllab1-2.html
+++ b/htmllab1-2.html
@@ -4,37 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cast</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="caststylesheet.css">
 </head>
 <body>
     <main id="main">
-        <h1>Cast of Forest Gump</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th>Actor</th>
-                    <th>Character</th>
-                    <th>More Info</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Tom Hanks</td>
-                    <td>Forest Gump</td>
-                    <td><a href="https://www.imdb.com/name/nm0000158/" target="_blank">IMDb Profile</a></td>
-                </tr>
-                <tr>
-                    <td>Robin Wright</td>
-                    <td>Jenny Curran</td>
-                    <td><a href="https://www.imdb.com/name/nm0000705/" target="_blank">IMDb Profile</a></td>
-                </tr>
-                <tr>
-                    <td>Gary Sinise</td>
-                    <td>Lieutenant Dan Taylor</td>
-                    <td><a href="https://www.imdb.com/name/nm0000641/" target="_blank">IMDb Profile</a></td>
-                </tr>
-            </tbody>
-        </table>
+        <h1>Cast of Forrest Gump</h1>
+        <div class="cast">
+            <!-- Forrest Gump -->
+            <div class="cast-member">
+                <img src="Forest_Gump_Character.jpeg" alt="Forrest Gump" class="cast-image">
+                <h2>Forrest Gump</h2>
+                <p>Played by Tom Hanks</p>
+            </div>
+            <!-- Lieutenant Dan -->
+            <div class="cast-member">
+                <img src="ltdan.jpeg" alt="Lieutenant Dan" class="cast-image">
+                <h2>Lieutenant Dan</h2>
+                <p>Played by Gary Sinise</p>
+            </div>
+            <!-- Jenny -->
+            <div class="cast-member">
+                <img src="jenny.jpeg" alt="Jenny" class="cast-image">
+                <h2>Jenny</h2>
+                <p>Played by Robin Wright</p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
