--- a/htmllab1-3.html
+++ b/htmllab1-3.html
@@ -9,6 +9,9 @@
 <body>
     <main id="main">
         <h1 id="title">Khriston Robinson</h1>
-        <h2>Email:khristonrobinson@gmail.com</h2>
-
+        <img src="Khriston.jpg" alt="Photo of Khriston Robinson" style="width:200px; border-radius:50%; display:block; margin:20px auto;">
+        <h2>Email: <a href="mailto:khristonrobinson@gmail.com">khristonrobinson@gmail.com</a></h2>
+        <h2>Portfolio: <a href="https://www.clippings.me/khristonr" target="_blank">https://www.clippings.me/khristonr</a></h2>
+    </main>
 </body>
+</html>
