--- a/htmllab1-2.html
+++ b/htmllab1-2.html
@@ -12,19 +12,19 @@
         <div class="cast">
             <!-- Forrest Gump -->
             <div class="cast-member">
-                <img src="Forest_Gump_Character.jpeg" alt="Forrest Gump" class="cast-image">
+                <img src="Forest_Gump_Character.jpg" alt="Forrest Gump" class="cast-image">
                 <h2>Forrest Gump</h2>
                 <p>Played by Tom Hanks</p>
             </div>
             <!-- Lieutenant Dan -->
             <div class="cast-member">
-                <img src="ltdan.jpeg" alt="Lieutenant Dan" class="cast-image">
+                <img src="ltdan.jpg" alt="Lieutenant Dan" class="cast-image">
                 <h2>Lieutenant Dan</h2>
                 <p>Played by Gary Sinise</p>
             </div>
             <!-- Jenny -->
             <div class="cast-member">
-                <img src="jenny.jpeg" alt="Jenny" class="cast-image">
+                <img src="jenny.jpg" alt="Jenny" class="cast-image">
                 <h2>Jenny</h2>
                 <p>Played by Robin Wright</p>
             </div>
